# sat-britney

./: ArchMap.hs  Arches.hs  AtomIndex.hs  ClauseSat.hs  ControlParser.hs  ControlTester.hs  DebCheck.hs  DebVersionCmp.hs  DepRules.hs  Difference.hs  Heidi.hs  Hints.hs  IndexMap.hs  IndexSet.hs  Indices.hs  LICENSE.txt  LitSat.hs  Main.hs  ParseHints.hs  ParseSuite.hs  Picosat.hs  PrettyPrint.hs  README.txt  SAT-Britney.cabal  Stats.hs  TransRules.hs  Types.hs  UrgencyTester.hs  ZArray.hs  make-static-binary.sh
Data/: DenseIntSet.hs
paper/: SAT-Britney.tex  bib.bib
problems/: relaxation-2011-08-04.wcnf
testdata/testing/: BugsV  Packages_amd64  Packages_i386  Sources
testdata/unstable/: BugsV  Packages_amd64  Packages_i386  Sources
